Refactoring to Void instead of DVD

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width,initial-scale=1,shrink-to-fit=no"
     />
-    <meta name="description" content="Bouncing DVD Logo." />
-    <title>Bouncing DVD Logo</title>
+    <meta name="description" content="Bouncing VOID Logo." />
+    <title>Bouncing VOID Logo</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
