--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,shrink-to-fit=no"
-    />
-    <meta name="description" content="Bouncing VOID Logo." />
-    <title>Bouncing VOID Logo</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "UA-59233605-1");
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+<head>
+
+  <title>DVD Logo</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+
+  <script src="jquery-3.4.1.min.js"> </script>
+  <script src="dvd.js"></script>
+
+  <link rel="stylesheet" href="dvd.css">
+
+</head>
+
+<body>
+
+ <div id="container">
+  <div id="animationBox">
+
+   <img id = "dvdLogo" src= "./assets/Void_ohneSchrift.png" width="300"/>
+  </div>
+ </div>
+
+</body>
+
 </html>
+
+
+
+
