--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <title>DVD Logo</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=yes"
+    />
 
-  <title>DVD Logo</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+    <script src="jquery-3.4.1.min.js"></script>
+    <script src="dvd.js"></script>
 
-  <script src="jquery-3.4.1.min.js"> </script>
-  <script src="dvd.js"></script>
+    <link rel="stylesheet" href="dvd.css" />
+  </head>
 
-  <link rel="stylesheet" href="dvd.css">
-
-</head>
-
-<body>
-
- <div id="container">
-  <div id="animationBox">
-
-   <img id = "dvdLogo" src= "./assets/Void_ohneSchrift.png" width="300"/>
-  </div>
- </div>
-
-</body>
-
+  <body>
+    <!-- <div
+      id="ww_e6627a99a87e4"
+      v="1.3"
+      loc="id"
+      a='{"t":"responsive","lang":"de","sl_lpl":1,"ids":["wl2730"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","sl_tof":"3"}'
+    >
+      Weather Data Source:
+      <a
+        href="https://augsburg.wetter-heute.org/"
+        id="ww_e6627a99a87e4_u"
+        target="_blank"
+        >Augsburg wetter heute</a
+      >
+    </div>
+    <script
+      async
+      src="https://app1.weatherwidget.org/js/?id=ww_e6627a99a87e4"
+    ></script> -->
+    <div id="container">
+      <div id="animationBox">
+        <img id="dvdLogo" src="./assets/Void_ohneSchrift.png" width="300" />
+      </div>
+    </div>
+  </body>
 </html>
-
-
-
-
